finally fixed input to properly import messages with commas in them

--- a/src/network_final.ipynb
+++ b/src/network_final.ipynb
@@ -44,32 +44,28 @@
    },
    "outputs": [],
    "source": [
-    "## first hurdle - PayMo messages can include commas, and therefore using pandas csv_read fails due to inconsistent number of columns.\n",
-    "## current compromise is to use DictReader instead, which truncates Message at first comma\n",
-    "## best solution likely involves regular expressions, but not analyzing messages for the time being anyway\n",
+    "## Difficult to parse messages section because it's possible for it to use commas\n",
+    "## Below, figured out solution - import raw string, then use regular expressions to pick out each component\n",
+    "## we choose everything after the fourth comma to be the message\n",
+    "batch_raw = []\n",
     "\n",
-    "#takes about 30 seconds to load the 3 million lines each of batch_payment and stream_payment on my macbook pro.\n",
-    "\n",
-    "print('Loading into Pandas...')\n",
-    "\n",
-    "batch_dict = {}\n",
-    "batch_dict['time'] = {}\n",
-    "batch_dict['id1'] = {}\n",
-    "batch_dict['id2'] = {}\n",
-    "batch_dict['amount'] = {}\n",
-    "batch_dict['message'] = {}\n",
-    "\n",
-    "with open(batch_path) as csvfile:\n",
-    "    reader = csv.DictReader(csvfile)\n",
-    "    for i, row in enumerate(reader):\n",
-    "        batch_dict['time'][i] = row['time']\n",
-    "        batch_dict['id1'][i] = row[' id1']\n",
-    "        batch_dict['id2'][i] = row[' id2']\n",
-    "        batch_dict['amount'][i] = row[' amount']\n",
-    "        batch_dict['message'][i] = row[' message']\n",
+    "with open(batch_path, newline='') as csvfile:\n",
+    "    for line in csvfile:\n",
+    "        batch_raw.append(line.strip())\n",
     "        \n",
-    "df_batch = pd.DataFrame.from_dict(batch_dict)\n",
-    "df_batch = df_batch[['time','id1','id2','amount','message']]"
+    "df_batch = pd.DataFrame(batch_raw, columns = ['raw'])\n",
+    "\n",
+    "## USE REGEX to parse out - everything before first comma is time, second comma is id1 and so on\n",
+    "## able to pick up messages with commas in them since it picks up all leftover characters at end of line\n",
+    "df_batch['time'] = df_batch['raw'].str.extract('^(.+?),', expand=True)\n",
+    "df_batch['id1'] = df_batch['raw'].str.extract('^[^,]*,([^,]*),', expand=True)\n",
+    "df_batch['id2'] = df_batch['raw'].str.extract('^[^,]*,[^,]*,([^,]*),', expand=True)\n",
+    "df_batch['amount'] = df_batch['raw'].str.extract('^[^,]*,[^,]*,[^,]*,([^,]*),', expand=True)\n",
+    "df_batch['message'] = df_batch['raw'].str.extract('^[^,]*,[^,]*,[^,]*,[^,]*,(.*$)', expand=True)\n",
+    "\n",
+    "#can get rid of raw data now that we've parsed everything\n",
+    "df_batch = df_batch.drop('raw', 1)\n",
+    "df_batch = df_batch.drop(0, 0) #drop header row"
    ]
   },
   {
@@ -335,25 +331,26 @@
     }
    ],
    "source": [
-    "## Now load in second half of data set - this time we choose to flag transactions as verified or unverified.\n",
-    "stream_dict = {}\n",
-    "stream_dict['time'] = {}\n",
-    "stream_dict['id1'] = {}\n",
-    "stream_dict['id2'] = {}\n",
-    "stream_dict['amount'] = {}\n",
-    "stream_dict['message'] = {}\n",
+    "## again, using regular expressions to parse from raw data.\n",
+    "stream_raw = []\n",
     "\n",
     "with open(stream_path, newline='') as csvfile:\n",
-    "    reader = csv.DictReader(csvfile)\n",
-    "    for i, row in enumerate(reader):\n",
-    "        stream_dict['time'][i] = row['time']\n",
-    "        stream_dict['id1'][i] = row[' id1']\n",
-    "        stream_dict['id2'][i] = row[' id2']\n",
-    "        stream_dict['amount'][i] = row[' amount']\n",
-    "        stream_dict['message'][i] = row[' message']\n",
+    "    for line in csvfile:\n",
+    "        stream_raw.append(line.strip())\n",
     "        \n",
-    "df_stream = pd.DataFrame.from_dict(stream_dict)\n",
-    "df_stream = df_stream[['time','id1','id2','amount','message']]"
+    "df_stream = pd.DataFrame(stream_raw, columns = ['raw'])\n",
+    "\n",
+    "## USE REGEX to parse out - everything before first comma is time, second comma is id1 and so on\n",
+    "## able to pick up messages with commas in them since it picks up all leftover characters at end of line\n",
+    "df_stream['time'] = df_stream['raw'].str.extract('^(.+?),', expand=True)\n",
+    "df_stream['id1'] = df_stream['raw'].str.extract('^[^,]*,([^,]*),', expand=True)\n",
+    "df_stream['id2'] = df_stream['raw'].str.extract('^[^,]*,[^,]*,([^,]*),', expand=True)\n",
+    "df_stream['amount'] = df_stream['raw'].str.extract('^[^,]*,[^,]*,[^,]*,([^,]*),', expand=True)\n",
+    "df_stream['message'] = df_stream['raw'].str.extract('^[^,]*,[^,]*,[^,]*,[^,]*,(.*$)', expand=True)\n",
+    "\n",
+    "#can get rid of raw data now that we've parsed everything\n",
+    "df_stream = df_stream.drop('raw', 1)\n",
+    "df_stream = df_stream.drop(0, 0) #drop header row"
    ]
   },
   {
