--- a/src/network_test.ipynb
+++ b/src/network_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -38,6 +38,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 2.26 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_dir = '../paymo_input/'\n",
+    "batch_file = 'batch_payment.csv'\n",
+    "stream_file = 'stream_payment.csv'\n",
+    "batch_path = input_dir + batch_file\n",
+    "stream_path = input_dir + stream_file\n",
+    "\n",
+    "test_file = 'batch_payment.csv'\n",
+    "test_path = input_dir + test_file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 57.4 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "## playing around with how to use regular expressions to handle the commas\n",
+    "# contained in the message section\n",
+    "batch_raw = []\n",
+    "\n",
+    "with open(batch_path, newline='') as csvfile:\n",
+    "    for line in csvfile:\n",
+    "        batch_raw.append(line.strip())\n",
+    "        \n",
+    "df_batch = pd.DataFrame(batch_raw, columns = ['raw'])\n",
+    "\n",
+    "## USE REGEX to parse out - everything before first comma is time, second comma is id1 and so on\n",
+    "## able to pick up messages with commas in them since it picks up all leftover characters at end of line\n",
+    "df_batch['time'] = df_batch['raw'].str.extract('^(.+?),', expand=True)\n",
+    "df_batch['id1'] = df_batch['raw'].str.extract('^[^,]*,([^,]*),', expand=True)\n",
+    "df_batch['id2'] = df_batch['raw'].str.extract('^[^,]*,[^,]*,([^,]*),', expand=True)\n",
+    "df_batch['amount'] = df_batch['raw'].str.extract('^[^,]*,[^,]*,[^,]*,([^,]*),', expand=True)\n",
+    "df_batch['message'] = df_batch['raw'].str.extract('^[^,]*,[^,]*,[^,]*,[^,]*,(.*$)', expand=True)\n",
+    "\n",
+    "#can get rid of raw data now that we've parsed everything\n",
+    "df_batch = df_batch.drop('raw', 1)\n",
+    "df_batch = df_batch.drop(0, 0) #drop header row"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {
     "collapsed": false
@@ -47,19 +112,107 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 2.61 ms\n"
+      "time: 2.07 ms\n"
      ]
     }
    ],
    "source": [
-    "input_dir = 'paymo_input/'\n",
-    "batch_file = 'batch_payment.csv'\n",
-    "stream_file = 'stream_payment.csv'\n",
-    "batch_path = input_dir + batch_file\n",
-    "stream_path = input_dir + stream_file\n",
-    "\n",
-    "test_file = 'batch_payment.csv'\n",
-    "test_path = input_dir + test_file"
+    "givers = df_batch.groupby('id1')\n",
+    "receivers = df_batch.groupby('id2')\n",
+    "partners_1 = {}\n",
+    "partners_2 = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>id1</th>\n",
+       "      <th>id2</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>message</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>time</td>\n",
+       "      <td>id1</td>\n",
+       "      <td>id2</td>\n",
+       "      <td>amount</td>\n",
+       "      <td>message</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016-11-02 09:38:53</td>\n",
+       "      <td>49466</td>\n",
+       "      <td>6989</td>\n",
+       "      <td>23.74</td>\n",
+       "      <td>🦄</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016-11-02 09:38:53</td>\n",
+       "      <td>52349</td>\n",
+       "      <td>8552</td>\n",
+       "      <td>37.10</td>\n",
+       "      <td>Pitcher</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016-11-02 09:38:53</td>\n",
+       "      <td>32639</td>\n",
+       "      <td>2562</td>\n",
+       "      <td>18.68</td>\n",
+       "      <td>🚕</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016-11-02 09:38:53</td>\n",
+       "      <td>15381</td>\n",
+       "      <td>13167</td>\n",
+       "      <td>20.92</td>\n",
+       "      <td>For your wife.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  time     id1     id2   amount          message\n",
+       "0                 time     id1     id2   amount          message\n",
+       "1  2016-11-02 09:38:53   49466    6989    23.74                🦄\n",
+       "2  2016-11-02 09:38:53   52349    8552    37.10          Pitcher\n",
+       "3  2016-11-02 09:38:53   32639    2562    18.68                🚕\n",
+       "4  2016-11-02 09:38:53   15381   13167    20.92   For your wife."
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 8.95 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_batch.head()"
    ]
   },
   {
@@ -73,86 +226,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 28.2 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "batch_dict = {}\n",
-    "batch_dict['time'] = {}\n",
-    "batch_dict['id1'] = {}\n",
-    "batch_dict['id2'] = {}\n",
-    "batch_dict['amount'] = {}\n",
-    "batch_dict['message'] = {}\n",
-    "\n",
-    "with open(test_path, newline='') as csvfile:\n",
-    "    reader = csv.DictReader(csvfile)\n",
-    "    for i, row in enumerate(reader):\n",
-    "        batch_dict['time'][i] = row['time']\n",
-    "        batch_dict['id1'][i] = row[' id1']\n",
-    "        batch_dict['id2'][i] = row[' id2']\n",
-    "        batch_dict['amount'][i] = row[' amount']\n",
-    "        batch_dict['message'][i] = row[' message']\n",
-    "        \n",
-    "df_batch = pd.DataFrame.from_dict(batch_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "time: 326 ms\n"
-     ]
-    }
-   ],
-   "source": [
-    "#dictionary columns are randomly ordered - reorder as expected\n",
-    "df_batch = df_batch[['time','id1','id2','amount','message']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "time: 1.96 ms\n"
-     ]
-    }
-   ],
-   "source": [
-    "givers = df_batch.groupby('id1')\n",
-    "receivers = df_batch.groupby('id2')\n",
-    "partners_1 = {}\n",
-    "partners_2 = {}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Skipping invalid key:  id1\n",
       "Skipping invalid key:  no. Even if the union were a matter of economic indifference\n",
       "Skipping invalid key:  and even if it were to be disadvantageous from the economic standpoint\n",
-      "time: 1min 36s\n"
+      "Skipping invalid key:  id2\n",
+      "time: 1min 44s\n"
      ]
     }
    ],
@@ -1481,6 +1559,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "## again, using regular expressions to parse from raw data.\n",
+    "stream_raw = []\n",
+    "\n",
+    "with open(stream_path, newline='') as csvfile:\n",
+    "    for line in csvfile:\n",
+    "        stream_raw.append(line.strip())\n",
+    "        \n",
+    "df_stream = pd.DataFrame(stream_raw, columns = ['raw'])\n",
+    "\n",
+    "## USE REGEX to parse out - everything before first comma is time, second comma is id1 and so on\n",
+    "## able to pick up messages with commas in them since it picks up all leftover characters at end of line\n",
+    "df_stream['time'] = df_stream['raw'].str.extract('^(.+?),', expand=True)\n",
+    "df_stream['id1'] = df_stream['raw'].str.extract('^[^,]*,([^,]*),', expand=True)\n",
+    "df_stream['id2'] = df_stream['raw'].str.extract('^[^,]*,[^,]*,([^,]*),', expand=True)\n",
+    "df_stream['amount'] = df_stream['raw'].str.extract('^[^,]*,[^,]*,[^,]*,([^,]*),', expand=True)\n",
+    "df_stream['message'] = df_stream['raw'].str.extract('^[^,]*,[^,]*,[^,]*,[^,]*,(.*$)', expand=True)\n",
+    "\n",
+    "#can get rid of raw data now that we've parsed everything\n",
+    "df_stream = df_stream.drop('raw', 1)\n",
+    "df_stream = df_stream.drop(0, 0) #drop header row"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 75,
    "metadata": {
     "collapsed": false
@@ -2096,6 +2204,26 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 272 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "#dictionary columns are randomly ordered - reorder as expected\n",
+    "df_batch = df_batch[['time','id1','id2','amount','message']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
      "data": {
       "text/plain": [
        "' 🇨🇴🇨🇴🇨🇴🇨🇴👍🏼🎉 '"
@@ -2110,6 +2238,41 @@
     "## BIG PROBLEM - SKIPPED OVER A BUNCH OF ENTRIES\n",
     "batch_dict['message'][377592]\n",
     "#print(len(batch_dict['message'].keys()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 28.2 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "batch_dict = {}\n",
+    "batch_dict['time'] = {}\n",
+    "batch_dict['id1'] = {}\n",
+    "batch_dict['id2'] = {}\n",
+    "batch_dict['amount'] = {}\n",
+    "batch_dict['message'] = {}\n",
+    "\n",
+    "with open(test_path, newline='') as csvfile:\n",
+    "    reader = csv.DictReader(csvfile)\n",
+    "    for i, row in enumerate(reader):\n",
+    "        batch_dict['time'][i] = row['time']\n",
+    "        batch_dict['id1'][i] = row[' id1']\n",
+    "        batch_dict['id2'][i] = row[' id2']\n",
+    "        batch_dict['amount'][i] = row[' amount']\n",
+    "        batch_dict['message'][i] = row[' message']\n",
+    "        \n",
+    "df_batch = pd.DataFrame.from_dict(batch_dict)"
    ]
   }
  ],
